--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ html {
 /*left part of the site w details*/
 #left-side {
   flex: 1.3;
-  border: 1px solid black;
 }
 
 #left-side div.details {
@@ -76,9 +75,31 @@ html {
 
 #right-side {
   flex: 1;
-  border: 1px solid black;
+  margin-right: 20px;
+  width: 350px;
+}
+
+#right-side p {
+  font-size: 30px;
+}
+
+#right-side input {
+  border: 2px solid #7b7d7d;
+  margin: 5px 0;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 22px;
+  padding-left: 4px;
 }
 
 #right-side input[type="text"] {
-  display: inline-block;
+  width: 150px;
+}
+
+#right-side input[type="email"] {
+  width: 305px;
+}
+
+#right-side input[type="password"]{
+  width: 305px;
 }
