--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ html {
 
 #bar input[type="submit"] {
   box-shadow: 2px 2px black;
+  background-color: #9dc7e0;
 }
 
 
@@ -73,6 +74,8 @@ html {
   color:  #7b7d7d;
 }
 
+
+/*right part of the side is sign up form*/
 #right-side {
   flex: 1;
   margin-right: 20px;
@@ -102,4 +105,29 @@ html {
 
 #right-side input[type="password"]{
   width: 305px;
+}
+
+#right-side input[type="radio"] {
+  display: inline-block;
+  border: 1px solid;
+  background: black;
+}
+
+#right-side select {
+  border: 1px solid black;
+  box-shadow: none;
+  background: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+}
+
+#right-side input[type="submit"] {
+  width: 305px;
+  height: 40px;
+  background-color: #308e42;
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  border: 2px solid black;
+  box-shadow: 3px 3px black;
 }
