--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ html {
   background-color: #9dc7e0;
 }
 
-
 /*left part of the site w details*/
 #left-side {
   flex: 1.3;
@@ -130,4 +129,10 @@ html {
   font-weight: bold;
   border: 2px solid black;
   box-shadow: 3px 3px black;
+}
+
+#right-side input[type="submit"]:active {
+  background-color: #3e8e41;
+  transform: translateY(4px);
+  box-shadow: 1px 2px;
 }
