--- a/style.css
+++ b/style.css
@@ -65,10 +65,11 @@ html {
 /*left part of the site w details*/
 #left-side {
   flex: 1.3;
+  margin: 70px 0 0 60px;
 }
 
 #left-side div.details {
-  margin: 70px 40px;
+
 }
 
 #left-side ul {
@@ -81,7 +82,6 @@ html {
 /*right part of the side is sign up form*/
 #right-side {
   flex: 1;
-  margin-right: 20px;
   width: 350px;
 }
 
