--- a/styleabout.css
+++ b/styleabout.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding-top: 40px;
+  font-size: 12px;
+  font-family: verdana;
 }
 
 /*fixed bar w logo, search bar, and user tools*/
@@ -60,4 +62,111 @@ body {
   background-image: url("http://www.iconsfind.com/wp-content/uploads/2015/11/20151112_5643f32e478ae.png");
   background-size: cover;
   display: inline-block;
+}
+
+/*container includes both top content and about content*/
+.container {
+  max-width: 700px;
+  margin: 0 auto 50px auto;
+}
+
+/*top-section includes cover page, and menu buttons*/
+#top-content {
+  border: 1px solid black;
+}
+
+#top-content .cover-page {
+  height: 300px;
+  border-bottom: 1px solid black;
+  background-color: #fff5d5;
+}
+
+#top-content .profile-pic {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  margin: 225px 0 0 15px;
+  display: inline-block;
+  position: static;
+  background-color: white;
+}
+
+#top-content .profile-name {
+  display: inline-block;
+  margin: 270px 0 0 10px;
+  position: absolute;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+#top-content .menu-button  {
+  height: 35px;
+  padding-left: 130px;
+}
+
+#top-content .profile-button {
+  display: inline-block;
+  float: left;
+  border-right: 1px solid black;
+  width: 70px;
+  text-align: center;
+  padding-top: 11px;
+  height: 24px;
+}
+
+#top-content .profile-button:first-child {
+  border-left: 1px solid black;
+}
+
+#top-content .profile-button:nth-child(2) {
+  background-color: #eeeeee;
+}
+
+#top-content .edit-link {
+  display: inline-block;
+  float: right;
+  margin: 12px 5px 0 0;
+  color: #4b9ebc;
+}
+
+/*bottom section is basic information and wordy summaries*/
+#about-content {
+  height: 400px;
+  border: 1px solid black;
+  margin-top: 20px;
+}
+
+#about-content .title {
+  border-bottom: 1px solid black;
+  height: 31px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 5px;
+  background-color: #eeeeee;
+  font-weight: bold;
+}
+
+#about-content .edit-button {
+  float: right;
+  display: inline-block;
+}
+
+#about-content .left-side {
+  line-height: 20px;
+  width: 250px;
+  margin: 30px 0 0 35px;
+  display: inline-block;
+}
+
+#about-content .right-side {
+  width: 350px;
+  float: right;
+  margin: 30px 35px 0 0;
+  display: inline-block;
+  text-align: justify;
+}
+
+#about-content .topic {
+  font-size: 18px;
+  font-weight: bold;
 }
