--- a/stylefriends.css
+++ b/stylefriends.css
@@ -194,3 +194,13 @@ body {
   margin-top: 25px;
   padding-top: 2px;
 }
+
+#friends .unfriend a:link {
+  text-decoration: none;
+  color: black;
+}
+
+#friends .unfriend a:visited {
+  color: black;
+  text-decoration: none;
+}
